kube/applications/jellyseerr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: applications
spec:
  ports:
    - port: 5055
      targetPort: 5055
      protocol: TCP
      name: http
  selector:
    app: jellyseerr
