kube/applications/jellyseerr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr
  namespace: applications
spec:
  rules:
    - host: jellyseerr.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  number: 5055
  tls:
    - hosts:
        - jellyseerr.${DOMAIN}
      secretName: wildcard-cert
